# taskmaster

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  Makefile  PROJECT_STATUS.md  QUICKSTART.md  README.md  SECURITY.md  SETUP.md  SETUP_COMPLETE.md  config.py  pyproject.toml  requirements.txt  server.py  test_workflow.py
.gemini/: settings.json
.github/workflows/: ci.yml
audit/: audit_manager.py  session_report.md
audit/loot/: .gitkeep
examples/: EXAMPLES.md  claude-desktop-config.json  gemini-cli-settings.json  mcp-stdio-settings.json  sample-prompts.md
executors/: Dockerfile  README.md  aliases  kali_operator.py  zshrc
policies/: agent_mission_template.md  command_validator.py  platform_constraints.md  state_policy.py
scripts/: build.sh  cleanup.sh  mcp-http-bridge.py  spawn-agent.sh  start-server-debug.sh  start-server.sh  test.sh
skills/: TEMPLATE.md  base.py  cloud.py  network.py  subdomain.py  takeover.py  web.py
state/: executions.db  executions.json.migrated  state.py  storage.py
tests/: __init__.py
tests/integration/: test_workflow.py
tests/unit/: test_state.py
tools/: claim_execution.py  cleanup_agents.py  complete_execution.py  fail_execution.py  fetch_execution_result.py  list_queued_executions.py  mark_execution_complete.py  query_execution_status.py  recover_execution.py  request_security_action.json  request_security_action.py  spawn_agent.py  start_execution.py  wait_for_completion.py
